@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-12-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 2,
